2010-05-13  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/CameraPlugin/sqCamera.c: Added.

	* npsqueak/npsqueakrun.in (realpath): prepend dir to link target
	iff target is relative.

	* cmake/squeak.in (wrapper): Don't echo the environment.

	* CMakeLists.txt: Add subdir npsqueak.

	* npsqueak.c: Cosmetic improvements to error messages.

	* npsqueak/README.npsqueak: Updated for CMake.

	* npsqueak/npsqueakrun.in: New version from Bert.

	* npsqueak/npsqueakregister.in (NPSQUEAK_SO): Construct from
	substituted cmake variables.

	* cmake/squeak.in (realpath): prepend dir to link target iff
	target is relative.  Only echo environment if SQUEAK_DEBUG is
	nonzero.

2010-05-11  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-display-X11/sqUnixX11.c: Add option -closequit and
	environment variable SQUEAK_CLOSEQUIT.

2010-04-13  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* doc/RELEASE_NOTES_4.0.3.2202: Release 4.0.3.2202.

	* vm-sound-pulse/sqUnixSoundPulseAudio.c: New version from Derek
	O'Connell as used in Scratch.  Fixes bad behaviour on Karmic.

2010-04-12  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src: UUIDPlugin is now internal.

	* Makefile: Use cmake/configure.

2010-04-11  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* doc/RELEASE_NOTES_4.0.3.2196: Release 4.0.3.2196.

	* plugins/MIDIPlugin/config.cmake: Enable ALSA MIDI support if
	alsa/asoundlib.h and linasound are available.

	* plugins/MIDIPlugin/sqUnixMIDI.c: Include "debug.h".

	* plugins/MIDIPlugin/sqUnixMIDIALSA.inc: Change invocations of
	debugf(x) to pass a single argument.

	* plugins/SqueakFFIPrims/config.cmake: Add sqManualSurface.c to
	plugin sources list.

2010-04-10  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* CMakeLists.txt: Change VM_HOST_CPU from x86_64 to i386 if
	CMAKE_ARCH_FLAGS is -m32.

	* cmake/squeak.sh.in (PATH): Find path to binary using pwd -p if
	it appears to be available.