@@ -1,3 +1,8 @@
+2010-08-06  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
+
+	* vm-display-X11/config.cmake: Manually check for Xrender library.
+	Set HAVE_LIBXRENDER instead of HAVE_LIB_XRENDER.
+
 2010-05-13  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>
 
 	* plugins/CameraPlugin/sqCamera.c: Added.
